fix: added gap between each timing-diagram

--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -1734,6 +1734,7 @@ input[type='range']::-webkit-slider-thumb {
 .panel-button {
     cursor: pointer;
     padding: 2px;
+    margin: 2px
 }
 
 .draggable-panel-css .maximize {
